fixing alignment

--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -15,6 +15,24 @@
         url('../fonts/academicons.woff') format('woff'),
         url('../fonts/academicons.svg') format('svg');
 }
+
+.author__urls i {
+  font-size: 16px;
+  vertical-align: middle;
+  display: inline-block;
+  margin-right: 8px;
+}
+
+.author__desktop {
+  display: flex;
+  align-items: center;
+}
+
+.icon-pad-right {
+  vertical-align: middle;
+  line-height: 1;
+}
+
 .ai {
   font-family: 'Academicons';
   font-weight: 400;
